--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,17 @@ dependencies:
   flip_card: ^0.6.0
   flutter_widgets: ^0.1.12
   shared_preferences: ^2.0.13
+  flutter_launcher_icons: ^0.9.2
+  flutter_native_splash: ^2.1.5
+  flutter_tts: ^3.3.3
+
+flutter_icons:
+  git:
+    url: https://github.com/Davenchy/flutter_launcher_icons.git
+    ref: fixMinSdkParseFlutter2.8
+  android: true
+  ios: true
+  image_path: "assets/images/icon.png"
 
 
 dev_dependencies:
@@ -60,11 +71,14 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+flutter_native_splash:
+  background_image: "assets/images/icon.png"
+  fullscreen: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
